[package]
name         = "tokio-nsq"
version      = "0.5.2"
authors      = ["Harpo Roeder <roedeharpo@protonmail.ch>"]
edition      = "2018"
license      = "BSD-3-Clause"
repository   = "https://github.com/harporoeder/tokio-nsq"
description  = "A rust NSQ client built on Tokio. Tokio NSQ aims to be a feature complete NSQ client implementation."
readme       = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper             = "0.13"
tokio             = { version = "0.2.22", features = ["full"] }
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
byteorder         = "1.3"
failure           = "0.1.8"
log               = "0.4"
simplelog         = "0.8"
tokio-rustls      = "0.14"
rustls            = { version = "0.18", features = ["dangerous_configuration"] }
regex             = "1"
lazy_static       = "1.4"
backoff           = "0.2.1"
miniz_oxide       = "0.4.0"

[dev-dependencies]
rand = "0.7.3"
