[package]
name        = "tokio-nsq"
version     = "0.14.0"
authors     = ["Harpo Roeder <roedeharpo@protonmail.ch>"]
edition     = "2018"
license     = "BSD-3-Clause"
repository  = "https://github.com/harporoeder/tokio-nsq"
description = "A Rust NSQ client built on Tokio. Tokio NSQ aims to be a feature complete NSQ client implementation."
readme      = "README.md"
categories  = ["asynchronous", "network-programming", "concurrency"]

[dependencies]
hyper             = { version = "^0.14", features = ["client", "http1", "tcp"] }
tokio             = { version = "^1.0", features = ["full"] }
serde             = { version = "1.0", features = ["derive"] }
serde_json        = "1.0"
byteorder         = "1.3"
anyhow            = "1.0"
thiserror         = "1.0"
log               = "0.4"
tokio-rustls      = "^0.22"
rustls            = { version = "0.19", features = ["dangerous_configuration"] }
regex             = "1"
lazy_static       = "1.4"
backoff           = "0.2.1"
gethostname       = "0.2.1"
snap              = "1"
matches           = "0.1.8"
async-compression = { version = "0.3.7", features = ["tokio", "deflate"] }
tokio-io-timeout  = "^1.1"
futures-util      = "^0.3"
futures           = "^0.3"

[dev-dependencies]
rand       = "0.7.3"
env_logger = "0.7.1"

[build-dependencies]
built = "0.6"
